[tool.poetry]
name = "analog"
version = "0.1.0"
description = "Tools to process Analog films"
authors = ["s. rannou <mxs@sbrk.org>"]
readme = "README.md"
packages = [{include = "cli.py"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
Wand = "^0.6.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
analog = "cli:main"
